--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,8 @@
 FROM golang:1.20-alpine AS builder
 WORKDIR /app
 COPY . .
+RUN go env -w GO111MODULE=on
+RUN go env -w GOPROXY=https://goproxy.cn,direct
 RUN go build -o app .
 
 FROM alpine:latest
